changes done in frotend

--- a/Frontend/src/components/footer/footer.css
+++ b/Frontend/src/components/footer/footer.css
@@ -25,10 +25,12 @@
   }
   
   .company-name {
+    color: #fff;
     margin: 0;
   }
   
   .footer-bottom {
+    color: #fff;
     margin-top: 20px;
   }
   
