--- a/Frontend/src/components/navbar/navbar.css
+++ b/Frontend/src/components/navbar/navbar.css
@@ -7,7 +7,7 @@
     padding: 10px 20px;
   }
   .signin-btn {
-    font-family: "Courgette";
+    font-family: "Poppins";
     background-color: #26a1e9;
     color: #ffffff;
     border: none;
