--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,18 +1,7 @@
-body {
-    margin: 0;
-    font-family: 'Courgette', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    /* font-family: 'Josefin Sans', sans-serif; */
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  #con{
-    max-height: "300px";
-  }
+.slick-slide > div{
+    margin: 0 10px;
+}
